--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "i18next": "^22.4.9",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
